# civarium-mcp

./: .gitignore  CHANGELOG.md  LICENSE  MCP_CONTEXT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: hermes.config.yaml
src/civarium_mcp/: __init__.py  __main__.py  config.py  gateway.py  instructions.py  resources.py  schemas.py  server.py  tools.py
src/civarium_mcp/docs/: __init__.py  civarium-agent-knowledge.md  civarium-command-lifecycle.md  civarium-current-mechanics.md  civarium-glossary.md  civarium-overview.md  civarium-tools.md  civarium-world-model.md
tests/: conftest.py  support.py  test_config.py  test_gateway.py  test_hermes_config.py  test_tools.py
