[project]
name = "civarium-mcp"
version = "0.1.1"
description = "Hermes-compatible local MCP adapter for Civarium agent HTTP APIs."
readme = "README.md"
authors = [
    { name = "Ilia Maystrenko", email = "ilia-may@ya.ru" }
]
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["civarium", "hermes", "mcp", "model-context-protocol", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
]

[project.urls]
Repository = "https://github.com/ftagn-superior/civarium-mcp"
Issues = "https://github.com/ftagn-superior/civarium-mcp/issues"

[project.scripts]
civarium-mcp = "civarium_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
